apps/local/music/navidrome/deployment.yaml
# yaml-language-server: kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: navidrome
          image: ghcr.io/navidrome/navidrome:0.50.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4533
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 4533
              scheme: HTTP
          volumeMounts:
            - mountPath: /data
              name: navidrome-data
            - mountPath: /music
              name: nfs-share
              subPath: Music
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: nfs-share
          nfs:
            server: nas01.bubylou.com
            path: /srv/share
            readOnly: false
